--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -2,9 +2,9 @@
 
 <h1 class="pageTitle">{{ usersShow.user.username }}'s Profile</h1>
 
-<div class="userProgress container">
+<div class="userProgress container" ng-if="main.isAuthenticated() && main.currentUserId === usersShow.user.id">
   <p>Profile Strength:</p>
-  <uib-progressbar class="progress-striped active progress-width" value="usersShow.user.percentageComplete"  type="{{usersShow.type}}" ng-if="main.isAuthenticated() && main.currentUserId === usersShow.user.id">{{usersShow.user.percentageComplete}} % </uib-progressbar>
+  <uib-progressbar class="progress-striped active progress-width" value="usersShow.user.percentageComplete"  type="{{usersShow.type}}" >{{usersShow.user.percentageComplete}} % </uib-progressbar>
 </div>
 
 <div class="container">
