--- a/src/js/views/projects/show.html
+++ b/src/js/views/projects/show.html
@@ -16,28 +16,26 @@
       <h4>Created By: <a ui-sref="usersShow({ id:projectsShow.project.createdBy.id })">{{ projectsShow.project.createdBy.username }}</a></h4>
       <div class="userLinks">
         <span>
-          <a href="mailto:{{ usersShow.user.email }}?Subject=Hi!%20Saw%20your%20profile%20on%20DevBook%20and%20wanted%20to%20get%20in%20touch..." target="_top">
+          <a href="mailto:{{ projectsShow.project.createdBy.email }}?Subject=Hi!%20Saw%20your%20profile%20on%20DevBook%20and%20wanted%20to%20get%20in%20touch..." target="_top">
             <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
           </a>
         </span>
         <span>
-          <a href="{{ usersShow.user.githubUrl }}" target="_blank">
+          <a href="{{ projectsShow.project.createdBy.githubUrl }}" target="_blank">
             <i class="fa fa-github-square fa-4x" aria-hidden="true"></i>
           </a>
         </span>
         <span>
-          <a href="{{ usersShow.user.linkedinUrl }}" target="_blank">
+          <a href="{{ projectsShow.project.createdBy.linkedinUrl }}" target="_blank">
             <i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i>
           </a>
         </span>
         <span>
-          <a href="{{ usersShow.user.portfolioUrl }}" target="_blank">
+          <a href="{{ projectsShow.project.createdBy.portfolioUrl }}" target="_blank">
             <i class="fa fa-laptop fa-4x" aria-hidden="true"></i>
           </a>
         </span>
       </div>
-
-
 
   </div>
 
